# grumplestiltskin

./: .gitignore  CONCEPT.md  PRODUCT.md  README.md  cabal.project  flake.nix  grumplestiltskin.cabal  typos.toml
documents/: CONCEPT.md
documents/milestone-1/: GF_IMPLEMENTATION.md
documents/milestone-2/: EC_IMPLEMENTATION.md
documents/planning/: PRODUCT.md  TASKS.md
goldens/: ec.bench.golden  ec.uplc.eval.golden  ec.uplc.golden  extension.bench.golden  extension.uplc.eval.golden  extension.uplc.golden  galois.bench.golden  galois.uplc.eval.golden  galois.uplc.golden
src/Grumplestiltskin/: Degree2.hs  EllipticCurve.hs  Galois.hs  Verify.hs
test/ec/: GenCurve.hs  Main.hs
test/extension/: Main.hs
test/galois/: Main.hs
