cabal-version:      3.0
name:               grumplestiltskin
version:            1.0.0
author:             Koz Ross <koz@mlabs.city>
license:            Apache-2.0
extra-source-files: README.md
tested-with:        GHC ==9.6.6

common lang
  ghc-options:
    -Wall -Wcompat -Wredundant-bang-patterns
    -Wredundant-strictness-flags -Wmissing-deriving-strategies
    -Woperator-whitespace -Wambiguous-fields -Wmisplaced-pragmas
    -Wmissing-export-lists -Wmissing-import-lists -Werror

  default-extensions:
    BangPatterns
    BinaryLiterals
    DataKinds
    DeriveTraversable
    DerivingVia
    DuplicateRecordFields
    EmptyCase
    FlexibleContexts
    FlexibleInstances
    GeneralizedNewtypeDeriving
    HexFloatLiterals
    ImportQualifiedPost
    InstanceSigs
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    NoFieldSelectors
    NoStarIsType
    NumericUnderscores
    OverloadedLabels
    OverloadedStrings
    PackageImports
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    UndecidableInstances

  default-language:   Haskell2010
  build-depends:
    , base      >=4.9    && <5
    , plutarch  ==1.13.0

common test-lang
  import:        lang
  ghc-options:   -O2 -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    , grumplestiltskin
    , indexed-traversable
    , plutarch-testlib
    , QuickCheck
    , tasty
    , tasty-hunit
    , tasty-quickcheck

library
  import:          lang
  exposed-modules:
    Grumplestiltskin.EllipticCurve
    Grumplestiltskin.Galois

  build-depends:
    , generics-sop
    , QuickCheck
    , quickcheck-instances

  hs-source-dirs:  src

test-suite galois
  import:         test-lang
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  build-depends:  quickcheck-instances
  hs-source-dirs: test/galois

test-suite ec
  import:         test-lang
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  build-depends:  quickcheck-instances
  hs-source-dirs: test/ec
